--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <img src="https://www.raed.net/img?id=1493762" class="logo">
   <div>
     <h1>الاستعلام عن لجنة الطالب</h1>
-    <p>واجهة رقمية ذكية لخدمة طلاب المدرسة</p>
+    <p>ثانوية الفضيلة الأولى</p>
   </div>
 </header>
 
