--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="background"></div>
 
 <header class="top">
-  <img src="IMG_4087-removebg-preview.png" class="logo" alt="شعار مدرسة الفضيلة">
+  <img src="https://www.raed.net/img?id=1493762" class="logo" alt="شعار مدرسة الفضيلة">
   <div>
     <h1>نظام لجان الاختبارات</h1>
     <p>ثانوية الفضيلة الأولى</p>
