--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 </header>
 
 <main class="glass">
+  
+  <a href="https://yasserrrr2025.github.io/exam-schedule/" target="_blank" class="schedule-btn">
+    📅 عرض جدول الاختبارات
+  </a>
+
   <div class="switch">
     <button class="active" onclick="switchMode('id')" id="btn-id">بحث بالهوية</button>
     <button onclick="switchMode('list')" id="btn-list">بحث بالقوائم</button>
