--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <main class="glass">
   
   <a href="https://yasserrrr2025.github.io/exam-schedule/" target="_blank" class="schedule-btn">
-    📅 عرض جدول الاختبارات
+    <span>📅</span> مشاهدة جدول الاختبارات
   </a>
 
   <div class="switch">
